<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/logDisplayRecyclerView"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginTop="32dp"
        android:padding="2dp"
        android:clipToPadding="false"
        android:fitsSystemWindows="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/gymlog_recycler_item" />

    <TextView
        android:id="@+id/exerciseLabelTextView"
        android:layout_width="107dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/exercise"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logDisplayRecyclerView" />

    <EditText
        android:id="@+id/exerciseInputEditText"
        android:layout_width="245dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:inputType="textAutoComplete"
        android:padding="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/exerciseLabelTextView"
        app:layout_constraintStart_toEndOf="@id/exerciseLabelTextView"
        android:hint="@string/enter_an_exercise"
        />

    <TextView
        android:layout_width="100dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/weight"
        android:id="@+id/weightLabelTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/exerciseLabelTextView"
        android:textSize="24sp"
        />

    <EditText
        android:id="@+id/weightInputEditText"
        android:layout_width="245dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:inputType="number|numberDecimal"
        android:padding="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/weightLabelTextView"
        app:layout_constraintStart_toEndOf="@id/weightLabelTextView"
        android:hint="@string/enter_a_weight"
        />

    <TextView
        android:layout_width="100dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/reps"
        android:id="@+id/repLabelTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weightLabelTextView"
        android:textSize="24sp"
        />

    <EditText
        android:id="@+id/repInputEditText"
        android:layout_width="245dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:inputType="number"
        android:padding="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/repLabelTextView"
        app:layout_constraintStart_toEndOf="@id/repLabelTextView"
        android:hint="@string/enter_reps"
        />

    <Button
        android:layout_width="390dp"
        android:layout_height="125dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/repInputEditText"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:text="@string/log"
        android:textSize="36sp"
        android:id="@+id/logButton"/>


</androidx.constraintlayout.widget.ConstraintLayout>